# AI_Resume

./: .env.example  .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
AI-Resume-v1/: .gitignore  README.md  README.zh.md  package-lock.json  requirements.txt
AI-Resume-v1/backend/: __init__.py  llm_client.py  main.py  pipeline.py  prompts.py  schemas.py  storage.py
AI-Resume-v1/backend/routers/: analyze.py  prompts.py
AI-Resume-v1/demo/: demo.py  output.json
AI-Resume-v1/docs/: PLAN.md  opening_report.md
AI-Resume-v1/frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
AI-Resume-v1/frontend/src/: i18n.ts  types.ts
AI-Resume-v1/frontend/tests/: setupTests.ts
AI-Resume-v1/tests/backend/: conftest.py  test_llm_client.py  test_pipeline_core.py  test_routers_analyze.py  test_storage.py
AI-Resume-v2/: README.md
AI-Resume-v2/backend/: llm_client.py  main.py  pipeline.py  prompts.py  pyproject.toml  schemas.py  storage.py
AI-Resume-v2/backend/routers/: analysis.py  history.py  prompts.py
AI-Resume-v2/docs/: overview.md
AI-Resume-v2/frontend/: package-lock.json  package.json  tailwind.config.js
AI-Resume-v2/frontend/src/: App.tsx  api.ts  index.css  types.ts
backend/: llm_client.py  pipeline.py  prompt_templates.py  storage.py
backend/routers/: analyze.py
demo/: demo.py  jd_sample.txt  output.json  resume_sample.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css
frontend/src/pages/: AnalyzePage.tsx  HistoryPage.tsx
(+13 files in other folders)
