[project]
name = "ai-career-assistant"
version = "0.1.0"
description = "AI-driven career development assistant with FastAPI + React."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pydantic==2.6.4",
    "rich==13.7.0",
    "sqlmodel==0.0.14",
]

[tool.uv]
dev-dependencies = []
