[project]
name = "ai-resume-backend"
version = "0.1.0"
description = "LLM-powered resume & JD gap analyzer"
authors = [{ name = "AI Resume" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.103.2",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.16,<0.0.17",
    "pydantic>=1.10.13,<2.0.0",
    "sse-starlette>=2.0.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "anyio>=3.7"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
